Fixed problem with navigation on small screen

--- a/src/sass/component/navbar.scss
+++ b/src/sass/component/navbar.scss
@@ -15,6 +15,7 @@
   align-items: center;
   width: 12vw;
   height: 100vh;
+  min-width: 100px;
   box-sizing: border-box;
   padding: 10px 0px;
   background: rgba(245, 242, 240, 0.9);
